--- a/webapp/bower.json
+++ b/webapp/bower.json
@@ -27,8 +27,9 @@
     "underscore": "~1.7.0",
     "fuelux": "~3.5.1",
     "angular-animate": "1.2",
-    "angular-cookies":"1.2"
-
+    "angular-cookies": "1.2",
+    "angular-bootstrap-nav-tree": "*",
+    "components-font-awesome": "~4.3.0"
   },
   "devDependencies": {
     "less.js": "~1.4.0",
