KYLIN-715 fix license issue

--- a/pom.xml
+++ b/pom.xml
@@ -674,9 +674,30 @@
                         <configuration>
                             <!-- Exclude files/folders for apache release -->
                             <excludes>
-                                <exclude>*.md</exclude>
-                                <exclude>docs/website</exclude>
-                                <exclude>docs/*.md</exclude>
+                                <!-- text files without comments -->
+                                <exclude>**/*.csv</exclude>
+                                <exclude>**/*.json</exclude>
+                                <exclude>**/*.md</exclude>
+                                <!-- binary files -->
+                                <exclude>**/*.dict</exclude>
+                                <exclude>**/*.snapshot</exclude>
+                                <exclude>**/*.pdf</exclude>
+
+                                <!-- generated files -->
+                                <exclude>**/target/**</exclude>
+                                <exclude>lib/**</exclude>
+                                <!-- Kylin's website content -->
+                                <exclude>**/.sass-cache/**</exclude>
+                                <exclude>docs/website/**</exclude>
+                                <!-- tomcat package -->
+                                <exclude>tomcat/**</exclude>
+                                <!-- front end libary and generated files -->
+                                <exclude>webapp/node_modules/**</exclude>
+                                <exclude>webapp/dist/**</exclude>
+                                <exclude>webapp/app/components/**</exclude>
+                                <!-- Temp -->
+                                <exclude>webapp/template/nginx_default.conf</exclude>
+                                <exclude>webapp/validate-commit-msg.js</exclude>
                             </excludes>
                         </configuration>
                         <executions>
