--- a/pom.xml
+++ b/pom.xml
@@ -602,6 +602,16 @@
             </activation>
             <build>
                 <plugins>
+                	 <plugin>
+    					<groupId>org.apache.maven.plugins</groupId>
+    					<artifactId>maven-compiler-plugin</artifactId>
+    					<version>2.5.1</version>
+    					<configuration>
+      						<fork>true</fork>
+     						<meminitial>1024m</meminitial>
+      						<maxmem>1024m</maxmem>
+    					</configuration>
+  					</plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
