--- a/pom.xml
+++ b/pom.xml
@@ -587,7 +587,7 @@
                                     <value>false</value>
                                 </property>
                             </systemProperties>
-                            <argLine>-Xms1G -Xmx2G -XX:PermSize=128M -XX:MaxPermSize=256M</argLine>
+                            <argLine>-Xms1G -Xmx4G -XX:PermSize=128M -XX:MaxPermSize=512M</argLine>
                         </configuration>
                     </plugin>
 
@@ -602,16 +602,16 @@
             </activation>
             <build>
                 <plugins>
-                	 <plugin>
-    					<groupId>org.apache.maven.plugins</groupId>
-    					<artifactId>maven-compiler-plugin</artifactId>
-    					<version>2.5.1</version>
-    					<configuration>
-      						<fork>true</fork>
-     						<meminitial>1024m</meminitial>
-      						<maxmem>2048m</maxmem>
-    					</configuration>
-  					</plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>2.5.1</version>
+                        <configuration>
+                            <fork>true</fork>
+                            <meminitial>1024m</meminitial>
+                            <maxmem>2048m</maxmem>
+                        </configuration>
+                    </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
@@ -685,9 +685,16 @@
                                 <exclude>**/BuildIIWithEngineTest.java</exclude>
                                 <exclude>**/SampleCubeSetupTest.java</exclude>
                                 <exclude>**/KylinQueryTest.java</exclude>
-                                <exclue>**/SnapshotManagerTest.java</exclue>
-                                <exclue>**/HiveTableReaderTest.java</exclue>
+                                <exclude>**/SnapshotManagerTest.java</exclude>
+                                <exclude>**/HiveTableReaderTest.java</exclude>
                                 <exclude>**/TableControllerTest.java</exclude>
+
+                                <!--test case under server folder are problematic when tested against minicluster-->
+                                <exclude>**/ServiceTestBase.java</exclude>
+                                <exclude>**/JDBCDriverTest.java</exclude>
+                                <exclude>%regex[.*ControllerTest.*]</exclude>
+                                <exclude>%regex[.*ServiceTest.*]</exclude>
+
                             </excludes>
                             <systemProperties>
                                 <property>
@@ -699,7 +706,7 @@
                                     <value>false</value>
                                 </property>
                             </systemProperties>
-                            <argLine>-Xms1G -Xmx2G -XX:PermSize=128M -XX:MaxPermSize=256M</argLine>
+                            <argLine>-Xms1G -Xmx4G -XX:PermSize=128M -XX:MaxPermSize=512M</argLine>
                         </configuration>
                     </plugin>
                     <!-- Apache-RAT checks for files without headers.
@@ -738,16 +745,17 @@
                                 <!-- json configuration file-->
                                 <exclude>webapp/.bowerrc</exclude>
                                 <exclude>webapp/.jshintrc</exclude>
-                                <!-- generated dict files -->                               
+                                <!-- generated dict files -->
                                 <exclude>dictionary/metastore_db/**</exclude>
-                                
+
                                 <!-- MIT license -->
                                 <exclude>webapp/app/css/AdminLTE-fonts.css</exclude>
                                 <exclude>webapp/app/css/AdminLTE.css</exclude>
 
                                 <!-- jdbc log -->
                                 <exclude>jdbc/kylin_jdbc.*</exclude>
-                              	
+                                <exclude>jdbc/kylin_jdbc.log.*</exclude>
+
                             </excludes>
                         </configuration>
                         <executions>
