--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -34,7 +34,7 @@ kylin.job.remote.cli.working.dir=/tmp/kylin
 kylin.job.concurrent.max.limit=10
 
 # Whether calculate cube in mem in each mapper;
-kylin.job.cubing.inMem=false
+kylin.job.cubing.inMem=true
 
 #the percentage of the sampling, default 25%
 kylin.job.cubing.inMem.sampling.percent=25
