--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,8 @@
         <commons-configuration.version>1.9</commons-configuration.version>
         <commons-daemon.version>1.0.15</commons-daemon.version>
         <commons-httpclient.version>3.1</commons-httpclient.version>
+        <commons-collections4.version>4.0</commons-collections4.version>
+
 
         <!-- Utility -->
         <log4j.version>1.2.17</log4j.version>
@@ -336,6 +338,11 @@
                 <groupId>commons-httpclient</groupId>
                 <artifactId>commons-httpclient</artifactId>
                 <version>${commons-httpclient.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
+                <version>${commons-collections4.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
@@ -609,6 +616,7 @@
 
                                 <exclude>**/Kafka*Test.java</exclude>
                                 <exclude>**/RequesterTest.java</exclude>
+                                <exclude>**/InMemCubeBuilderBenchmarkTest.java</exclude>
                             </excludes>
                             <systemProperties>
                                 <property>
