--- a/job/pom.xml
+++ b/job/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.kylin</groupId>
         <artifactId>kylin</artifactId>
-        <version>0.7.1-incubating-SNAPSHOT</version>
+        <version>0.7.1-incubating</version>
     </parent>
 
     <artifactId>kylin-job</artifactId>
