KYLIN-697 exclude inner classes in failover

--- a/pom.xml
+++ b/pom.xml
@@ -639,6 +639,7 @@
                         </executions>
                         <configuration>
                             <excludes>
+                                <exclude>**/*$*</exclude>
                                 <exclude>**/ITKafka*.java</exclude>
                             </excludes>
                             <systemProperties>
