KYLIN-699 update server and webapp settings for rc2

--- a/webapp/bower.json
+++ b/webapp/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "base",
-  "version": "0.0.1",
+  "name": "ApacheKylinWebApp",
+  "version": "0.7.1",
   "dependencies": {
     "angular-bootstrap": "0.10.0",
     "angular": "1.2.15",
