--- a/pom.xml
+++ b/pom.xml
@@ -544,9 +544,9 @@
 
     <profiles>
         <profile>
-            <id>default</id>
+            <id>minicluster</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
             <build>
                 <plugins>
@@ -591,7 +591,7 @@
         <profile>
             <id>sandbox</id>
             <activation>
-                <activeByDefault>false</activeByDefault>
+                <activeByDefault>true</activeByDefault>
             </activation>
             <build>
                 <plugins>
