update website structure and content
Signed-off-by: Luke Han <lukehan@apache.org>

--- a/docs/website/_config.yml
+++ b/docs/website/_config.yml
@@ -28,6 +28,8 @@ encoding: UTF-8
 
 # Build settings
 markdown: kramdown
+# Code highlight
+highlighter: pygments
 # Permalinks, default is pretty
 permalink: pretty
 
