--- a/job/pom.xml
+++ b/job/pom.xml
@@ -50,6 +50,14 @@
             <version>${project.parent.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.kylin</groupId>
+            <artifactId>kylin-storage</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+            <version>${project.parent.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.apache.kylin</groupId>
