--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <javaVersion>1.7</javaVersion>
         <maven-model.version>3.1.1</maven-model.version>
         <maven-release.version>2.5.1</maven-release.version>
+        <maven-assembly.version>2.4</maven-assembly.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -517,6 +518,7 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
                     <version>${maven-release.version}</version>
+
                 </plugin>
                 <plugin>
                     <groupId>org.jacoco</groupId>
@@ -534,6 +536,11 @@
                             </goals>
                         </execution>
                     </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>${maven-assembly.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -655,6 +662,27 @@
             <id>apache-release</id>
             <build>
                 <plugins>
+                    <!-- Override the parent assembly execution to customize the assembly
+              descriptor and final name. -->
+                    <plugin>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>source-release-assembly</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                                <configuration>
+                                    <runOnlyAtExecutionRoot>true</runOnlyAtExecutionRoot>
+                                    <appendAssemblyId>false</appendAssemblyId>
+                                    <descriptor>src/main/config/assemblies/source-assembly.xml</descriptor>
+                                    <finalName>apache-kylin-${project.version}-src</finalName>
+                                    <tarLongFileMode>gnu</tarLongFileMode>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
@@ -785,27 +813,7 @@
                             <failOnError>false</failOnError>
                         </configuration>
                     </plugin>
-                     <!-- Override the parent assembly execution to customize the assembly
-               descriptor and final name. -->
-          <plugin>
-            <artifactId>maven-assembly-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>source-release-assembly</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>single</goal>
-                </goals>
-                <configuration>
-                  <runOnlyAtExecutionRoot>true</runOnlyAtExecutionRoot>
-                  <appendAssemblyId>false</appendAssemblyId>
-                  <descriptor>src/main/config/assemblies/source-assembly.xml</descriptor>
-                  <finalName>apache-kylin-${project.version}-src</finalName>
-                  <tarLongFileMode>gnu</tarLongFileMode>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
+
                 </plugins>
             </build>
         </profile>
