--- a/pom.xml
+++ b/pom.xml
@@ -774,6 +774,9 @@
                                 <exclude>examples/test_case_data/minicluster/hbase-export.tar.gz</exclude>
                                 <exclude>examples/test_case_data/**/*.xml</exclude>
 
+                                <!-- MIT-Like License -->
+                                <exclude>dictionary/src/test/resources/dict/english-words.80 (scowl-2015.05.18).txt</exclude>
+
 
                             </excludes>
                         </configuration>
