--- a/pom.xml
+++ b/pom.xml
@@ -775,7 +775,7 @@
                                 <exclude>examples/test_case_data/**/*.xml</exclude>
 
                                 <!-- MIT-Like License -->
-                                <exclude>dictionary/src/test/resources/dict/english-words*.txt</exclude>
+                                <exclude>dictionary/src/test/resources/dict/**</exclude>
 
 
                             </excludes>
