KYLIN 669 exclude dictionary file rat check with MIT-like license

--- a/pom.xml
+++ b/pom.xml
@@ -774,8 +774,7 @@
                                 <exclude>examples/test_case_data/minicluster/hbase-export.tar.gz</exclude>
                                 <exclude>examples/test_case_data/**/*.xml</exclude>
 
-                                <!-- MIT-Like License -->
-                                <exclude>dictionary/src/test/resources/dict/**</exclude>
+                                <exclude>dictionary/src/test/resources/dict/*.txt</exclude>
 
 
                             </excludes>
