--- a/conf/kylin.properties
+++ b/conf/kylin.properties
@@ -26,8 +26,8 @@ kylin.metadata.url=kylin_metadata@hbase
 # The storage for final cube file in hbase
 kylin.storage.url=hbase
 
-# Temp folder in hdfs
-kylin.hdfs.working.dir=/tmp
+# Temp folder in hdfs, make sure user has the right access to the hdfs directory
+kylin.hdfs.working.dir=/kylin
 
 kylin.job.mapreduce.default.reduce.input.mb=500
 
