Add howto-make-release and release 0.7.1 blog and events-conference page

--- a/docs/website/_config.yml
+++ b/docs/website/_config.yml
@@ -20,11 +20,11 @@ title: kylin.io
 email: dev@kylin.incubator.apache.org
 description: Apache Kylin Home
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://kyli.io" # the base hostname & protocol for your site
+url: "http://kylin.incubator.apache.org" # the base hostname & protocol for your site
 twitter_username: ApacheKylin
-github_username:  KylinOLAP
 
 encoding: UTF-8
+timezone: America/Dawson 
 
 # Build settings
 markdown: kramdown
