Update license for v0.7.2 release

--- a/pom.xml
+++ b/pom.xml
@@ -586,7 +586,7 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>
-            <!-- Checkstyle Plugin
+            <!-- Checkstyle Plugin -->
             <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-checkstyle-plugin</artifactId>
@@ -608,7 +608,7 @@
                         </execution>
                     </executions>
                 </plugin>
-                -->
+
         </plugins>
 
     </build>
