--- a/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/src/main/webapp/WEB-INF/web.xml
@@ -159,4 +159,5 @@ limitations under the License. See accompanying LICENSE file.
         <url-pattern>/matrics/*</url-pattern>
     </servlet-mapping>
      -->
+    <distributable />
 </web-app>
