--- a/pom.xml
+++ b/pom.xml
@@ -466,7 +466,14 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-war-plugin</artifactId>
-                    <version>2.0.2</version>
+                    <version>2.6</version>
+                    <configuration>
+                        <packagingExcludes>
+                            WEB-INF/lib/servlet-api-*.jar,
+                            WEB-INF/lib/zookeeper-*.jar,
+                            WEB-INF/lib/metrics-*.jar
+                        </packagingExcludes>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
