--- a/server/pom.xml
+++ b/server/pom.xml
@@ -354,8 +354,19 @@
                     <groupId>javax.servlet.jsp</groupId>
                     <artifactId>jsp-api</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>net.sf.opencsv</groupId>
+                    <artifactId>opencsv</artifactId>
+                </exclusion>
             </exclusions>
           </dependency>
+
+        <dependency>
+            <groupId>net.sf.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>2.3</version>
+        </dependency>
+
         <!-- Tomcat Env -->
         <dependency>
             <groupId>org.apache.tomcat</groupId>
